--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
+buildscript {
+    ext.kotlin_version = "1.5.31"
+}
+
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
 }
 
 android {
@@ -46,4 +52,24 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'androidx.fragment:fragment-ktx:1.4.0'
     implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation "io.coil-kt:coil:1.4.0"
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.+'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.+'
+
+    // KotlinX Serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.+"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.+'
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.+"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.+"
+
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:2.+"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.+"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.+"
+
+
 }
