--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <activity
-            android:name=".user.UserInfoActivity"
+            android:name=".user.UserInfoFragment"
             android:exported="false" />
         <activity
             android:name=".form.FormActivity"
